--- a/UniVerSar/en.lproj/MainStoryboard.storyboard
+++ b/UniVerSar/en.lproj/MainStoryboard.storyboard
@@ -41,10 +41,10 @@
             </objects>
             <point key="canvasLocation" x="1550" y="-68"/>
         </scene>
-        <!--View Controller-->
+        <!--Main Map View Controller-->
         <scene sceneID="DJd-ck-edC">
             <objects>
-                <viewController id="tc3-EH-14N" sceneMemberID="viewController">
+                <viewController id="tc3-EH-14N" customClass="UVSMainMapViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a2m-ze-QrE">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -60,6 +60,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="s36-7K-MbR"/>
+                    <connections>
+                        <outlet property="_mainMapView" destination="atl-qI-cwa" id="un0-He-pkz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9c8-3c-twJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -92,6 +95,9 @@
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="UVSMainMapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UVSMainMapViewController.h"/>
         </class>
         <class className="UVSViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UVSViewController.h"/>
